--- a/client/less/main.less
+++ b/client/less/main.less
@@ -48,6 +48,19 @@ a{
   cursor: pointer;
 }
 
+// ::-webkit-scrollbar {
+//     width: 0px; 
+//     background: transparent;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//     background: #FF0000;
+// }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .loadedContent{
   height: 100%;
 }
